--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -136,6 +136,29 @@
               </ul>
             </li>
             {% endif %}
+
+            <!-- app privileges -->
+            {% if g.app_privileges %}
+            <li id="app_privileges_dropdown" class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Apps
+              </a>
+              
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                
+                <!-- <li class="dropdown-item"><b>Group Invitations</b></li> -->
+
+                {% for key, value in g.app_privileges.items() %}
+                <li class="app_privilege_item d-flex justify-content-between align-items-center p-1">
+                  <span class="text-nowrap me-2"><a class="d-flex dropdown-item" href="{{value['href']}}">{{value['name']}}</a></span>
+                </li>
+                {% endfor %}
+                
+              </ul>
+            </li>
+            {% endif %}
+
+
           </ul>
             
             <!-- logout -->
