--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -137,23 +137,33 @@
             </li>
             {% endif %}
 
-            <!-- app privileges -->
-            {% if g.app_privileges %}
-            <li id="app_privileges_dropdown" class="nav-item dropdown">
+            <!-- applications  -->
+            {%if g.applications | length > 0 or g.user.role == 'administrator' %}
+            <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Apps
+                Applications
               </a>
-              
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 
-                <!-- <li class="dropdown-item"><b>Group Invitations</b></li> -->
-
-                {% for key, value in g.app_privileges.items() %}
-                <li class="app_privilege_item d-flex justify-content-between align-items-center p-1">
-                  <span class="text-nowrap me-2"><a class="d-flex dropdown-item" href="{{value['href']}}">{{value['name']}}</a></span>
+                {% for app in g.applications %}
+                <li>
+                  <a class="d-flex dropdown-item" href="/{{app[1]}}">
+                    <span class="text-nowrap me-2">{{app[2]}}</span>
+                    {% if app[3] == 'administrator' %}
+                    <span class="ms-auto"><i class="fad fa-user-crown"></i></span>
+                    {% endif %}
+                  </a>
                 </li>
                 {% endfor %}
                 
+                {%if g.applications | length > 0 and g.user.role == 'administrator' %}
+                  <li><hr class="dropdown-divider"></li>
+                {% endif %}
+                
+                <!-- add application -->
+                {%if g.user.role == 'administrator' %}
+                <li><a class="dropdown-item" href="/applications/new">Create new application</a></li>
+                {% endif %}
               </ul>
             </li>
             {% endif %}
